; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/trace/beauty/extr_arch_prctl.c_syscall_arg__scnprintf_x86_arch_prctl_code.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/trace/beauty/extr_arch_prctl.c_syscall_arg__scnprintf_x86_arch_prctl_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.syscall_arg = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @syscall_arg__scnprintf_x86_arch_prctl_code(i8* %0, i64 %1, %struct.syscall_arg* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.syscall_arg*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.syscall_arg* %2, %struct.syscall_arg** %6, align 8
  %8 = load %struct.syscall_arg*, %struct.syscall_arg** %6, align 8
  %9 = getelementptr inbounds %struct.syscall_arg, %struct.syscall_arg* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load %struct.syscall_arg*, %struct.syscall_arg** %6, align 8
  %15 = getelementptr inbounds %struct.syscall_arg, %struct.syscall_arg* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i64 @x86_arch_prctl__scnprintf_code(i64 %11, i8* %12, i64 %13, i32 %16)
  ret i64 %17
}

declare dso_local i64 @x86_arch_prctl__scnprintf_code(i64, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
